--- a/index.html
+++ b/index.html
@@ -53,20 +53,32 @@
 
     <main>
         <section class="showcase">
-            <div id = "about">ABOUT ME</div>
-            <div>Graduated from Carleton University with a Bachelors of Engineering with specialization in Software.</div>
-            <div>Skills gained</div>
-            <table>
+            <div id = "about"><b>ABOUT ME</b></div>
+            <hr class = "space"/>
+            <div>
+                <p>Carleton University graduate with a Bachelors of Engineering; 
+                        specialization in Software.</p>
+                <p>I enjoy building amazing experiences for users</p>
+                <a href="./experience.html">poop</a>
+            </div>
+            
+            <table class = "table" CELLSPACING=0>
                 <tbody>
                     <tr>
-                        <td>Writing clean reusable code</td>
-                        <td>Concurrent programming</td>
-                        <td>Spring boot</td>
-                    </tr>
-                    <tr>
-                            <td>Designing scalable systems</td>
-                            <td>SQL</td>
-                            <td>Testing</td>
+                        <td>
+                            <ul>
+                                <li>Designing Systems</li>
+                                <li>SQL</li>
+                                <li>Testing</li>
+                            </ul>
+                        </td>
+                        <td>
+                                <ul>
+                                    <li>Designing Systems</li>
+                                    <li>SQL</li>
+                                    <li>Testing</li>
+                                </ul>
+                            </td>
                     </tr>
                 </tbody>
             </table>
